--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wave-recorder",
   "version": "0.0.0",
-  "description": "Record WAVE using Web Audio API and persist with Web FileSystem API",
+  "description": "Pipe Web Audio API nodes into 16bit PCM Wave files",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,13 +13,13 @@
   "keywords": [
     "pcm",
     "web audio",
-    "FileSystem API",
     "browser",
-    "recorder"
+    "record"
+    "encode"
   ],
   "author": "Matt McKegg",
   "license": "MIT",
   "dependencies": {
-    "wave-file-stream": "*"
+    "wav": "~0.2.0"
   }
 }
